--- a/componentes/Forumulario-de-Contacto/formulariodecontacto.html
+++ b/componentes/Forumulario-de-Contacto/formulariodecontacto.html
@@ -3,16 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario de Contacto</title>
+    <title>Contacto</title>
 
     <link rel="stylesheet" href="formulariodecontacto.css">
     <link rel="stylesheet" href="../../config/config.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+
 </head>
 <body>
 
-    <h2>Formulario de Contacto</h2>
-    
-    <script src="formulariodecontacto.js"></script>
+    <section class="box-contacto">
+        <div class="contacto">
+            <h1>Ponerse en contacto</h1>
+        </div>
+        <div class="emojis">
+            <div class="iconos">
+                <span class="material-symbols-outlined">
+                    location_on
+                    </span>
+                    <div> <h3>Calle 104 2765 Don </h3> </div>
+            </div>
+            <div class="iconos2">
+                <span class="material-symbols-outlined">
+                    call
+                    </span>
+                    <div> <h3>+1 (555) 000-000</h3> </div>
+            </div>
+            <div class="iconos3">
+                <span class="material-symbols-outlined">
+                    mail
+                    </span>
+                    <div> <h3>sajeronimo@.com</h3> </div>
+            </div>
+        </div>
 
+        <form action="" id="Cuadro-Datos">
+            <label for="">
+                <h2>Name</h2>
+                <input type="text">
+            </label>
+            <label for="">
+                <h2>Email</h2>
+                <input type="email">
+            </label>
+            <label for="">
+                <h2>Message</h2>
+                <input class="input2" type="text">
+            </label>
+            <div class="opcion">
+                <label for="">
+                    <input type="checkbox" name="" id="">
+                    I accept the
+                </label>
+                <span> Terms of Servicie</span>
+            </div>
+            <div class="envio">
+                <h1>Enviar</h1>
+            </div>
+        </form>
+
+    </section>
+
+
+    <script src="formulariodecontacto.js"></script>
+    
 </body>
 </html>
