--- a/componentes/Formulario-de-Comentarios/formulariodecomentario.html
+++ b/componentes/Formulario-de-Comentarios/formulariodecomentario.html
@@ -5,12 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario de Comentario-Reseña</title>
 
-    <link rel="stylesheet" href="formulariodecomentario-reseña.css">
+    <link rel="stylesheet" href="formulariodecomentario.css">
     <link rel="stylesheet" href="../../config/config.css">
 </head>
 <body>
     
-    <h2>Formulario de Comentario-Reseña</h2>
+    <div class="comment-P">
+        <h2 class="title">Deja tu Comentario</h2>
+        <form id="Form-P">
+            <div class="form-hijo">
+                <label for="name">Nombre:</label>
+                <input type="text" id="name" name="name" required>
+            </div>
+            <div class="form-hijo">
+                <label for="email">Correo Electrónico:</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div class="form-hijo">
+                <label for="comment">Comentario:</label>
+                <textarea id="comment" name="comment" rows="4" required></textarea>
+            </div>
+            <button type="submit">Enviar</button>
+        </form>
+        <div id="commentResult" class="hidden">
+            <h3>¡Gracias por tu comentario!</h3>
+            <p><strong>Nombre:</strong> <span id="resultName"></span></p>
+            <p><strong>Correo Electrónico:</strong> <span id="resultEmail"></span></p>
+            <p><strong>Comentario:</strong> <span id="resultComment"></span></p>
+        </div>
+    </div>
+
 
     <script src="formulariodecomentario-reseña.js"></script>
 
